# receipt-printer

./: README.md  pyproject.toml
business/: breakeven.md  business-model-canvas.md  customer-journey.md  dataflow.md  marketing-plan.md  partner-targets.md  tech-spec.md  user-stories.md
docs/: BMC.md  PRD.md  REQUIREMENTS.md  ROADMAP.md  STORIES.md  TECH_SPEC.md
src/: pdf_converter.py  receipt_printer.py
tests/: test_pdf_converter.py  test_receipt_printer.py
