[project]
name = "receipt-printer"
version = "0.1.0"
description = "A tiny testing framework for thermal receipt printers."
authors = [{name = "Axentx OS"}]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
